<resources>
    <string name="app_name">모메메모장</string>
    <string name="category">카테고리</string>
    <string name="input_category">카테고리를 입력해주세요.</string>
    <string name="add">추가하기</string>
    <string name="complete">완료</string>
    <string name="category_modified">카테고리가 수정되었습니다.</string>
    <string name="category_added">카테고리가 추가되었습니다.</string>
    <string name="doSave">저장하기</string>
    <string name="save">저장</string>
    <string name="important_memo">중요 메모</string>
    <string name="all_memo">모든 메모</string>
    <string name="add_category">카테고리 추가하기</string>
    <string name="edit_category">카테고리 편집하기</string>
    <string name="edit_category_canceled">카테고리 편집이 취소되었습니다.</string>
    <string name="edit_category_is_finished">카테고리 편집이 완료되었습니다.</string>
    <string name="cannot_delete_basic_category">기본 카테고리는 지울 수 없습니다.</string>
    <string name="title">Title</string>
    <string name="input_content">내용을 입력해주세요.</string>
    <string name="input_title">제목을 입력해주세요.</string>
    <string name="edit_memo_canceled">메모 편집이 취소되었습니다.</string>
    <string name="edit">Edit</string>
    <string name="gallery_permission_rejected">권한을 거부하시면 이미지를 업로드 하실 수 없습니다.</string>
    <string name="get_from_camera">사진으로 직접 찍기</string>
    <string name="get_from_gallery">갤러리에서 가져오기</string>
    <string name="get_from_url">외부 URL로 가져오기</string>
    <string name="delete_memo_canceled">메모 삭제가 취소되었습니다.</string>
    <string name="memo_deleted">메모가 삭제되었습니다.</string>
    <string name="memo_saved">메모가 저장되었습니다.</string>
    <string name="camera_permission_rejected">권한을 거부하시면 카메라를 사용할 수 없습니다.</string>
    <string name="input_external_url">이미지 URL을 입력해주세요.</string>
    <string name="load">불러오기</string>
    <string name="get_image">이미지 가져오기</string>
    <string name="no_memos">표시할 메모가 없습니다.</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="content">content</string>
    <string name="delete_category_cascade_memos">"카테고리를 지우면 하위 메모도 함께 지워집니다.\n그래도 삭제하시겠습니까?"</string>
    <string name="delete_cause_cascade_contents">"삭제하면 연관된 내용이 모두 삭제되며 복구할 수 없습니다. 그래도 삭제하시겠습니까?"</string>
    <string name="warning">경고</string>
    <string name="dont_go_TT">뒤로 버튼을 한 번 더 누르시면 종료됩니다.</string>
</resources>
