<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickListener"
            type="com.malibin.memo.ui.memo.edit.MemoImageAddListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:onClick="@{(view) -> clickListener.getImageFromCamera()}"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/get_from_camera"
            android:textSize="18sp" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray70" />

        <TextView
            android:id="@+id/btn_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:onClick="@{(view) -> clickListener.getImageFromGallery()}"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/get_from_gallery"
            android:textSize="18sp" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray70" />

        <TextView
            android:id="@+id/btn_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:onClick="@{(view) -> clickListener.getImageFromUrl()}"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/get_from_url"
            android:textSize="18sp" />
    </LinearLayout>
</layout>
