<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.app.Activity" />

        <import type="android.view.View" />

        <variable
            name="categoriesVM"
            type="com.malibin.memo.ui.category.CategoriesViewModel" />

        <variable
            name="categoriesNavigator"
            type="com.malibin.memo.ui.category.CategoriesNavigator" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".ui.category.CategoriesActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:onClick="@{(view)->((Activity)(view.getContext())).finish()}"
                android:visibility="@{categoriesVM.isEditMode() ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/btn_exit"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:onClick="@{(view) -> categoriesVM.cancelEditCategories()}"
                android:visibility="@{categoriesVM.isEditMode() ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/backarrow_ic" />

            <TextView
                android:id="@+id/btn_complete"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:onClick="@{(view) -> categoriesVM.finishEditCategories()}"
                android:paddingLeft="16dp"
                android:paddingRight="10dp"
                android:text="@string/complete"
                android:textSize="18sp"
                android:visibility="@{categoriesVM.isEditMode() ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/category"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_star" />

            <View
                android:id="@+id/line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/gray70"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_all_memo" />

            <TextView
                android:id="@+id/btn_important_memo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:onClick="@{(view) -> categoriesNavigator.filterWithImportant()}"
                android:text="@string/important_memo"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_all_memo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{(view) -> categoriesNavigator.filterWithAll()}"
                android:text="@string/all_memo"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/btn_important_memo"
                app:layout_constraintStart_toStartOf="@+id/btn_important_memo"
                app:layout_constraintTop_toBottomOf="@+id/btn_important_memo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_categories"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="56dp"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_category" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="56dp"
            android:visibility="@{categoriesVM.isEditMode() ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <View
                android:id="@+id/line2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/gray70"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ibtn_add_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line2"
                app:srcCompat="@drawable/img_plus" />

            <TextView
                android:id="@+id/tbtn_add_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(view) -> categoriesNavigator.addNewCategory()}"
                android:paddingStart="16dp"
                android:paddingRight="16dp"
                android:text="@string/add_category"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/ibtn_add_category"
                app:layout_constraintStart_toEndOf="@+id/ibtn_add_category"
                app:layout_constraintTop_toTopOf="@+id/ibtn_add_category" />

            <ImageView
                android:id="@+id/ibtn_edit_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{(view) -> categoriesVM.activateEditMode()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ibtn_add_category"
                app:srcCompat="@drawable/img_edit_category" />

            <TextView
                android:id="@+id/tbtn_edit_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(view) -> categoriesVM.activateEditMode()}"
                android:paddingStart="16dp"
                android:paddingRight="16dp"
                android:text="@string/edit_category"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/ibtn_edit_category"
                app:layout_constraintStart_toEndOf="@+id/ibtn_edit_category"
                app:layout_constraintTop_toTopOf="@+id/ibtn_edit_category" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
