<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".ui.category.AddModifyCategoryActivity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/category"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

        <EditText
            android:id="@+id/et_insert_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_rectangle_f0gray_4dp"
            android:ems="10"
            android:hint="@string/input_category"
            android:inputType="textPersonName"
            android:paddingStart="14dp"
            android:paddingTop="10dp"
            android:paddingEnd="14dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_edit_finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_rectangle_wintersky_4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/add"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_insert_category">

            <RadioButton
                android:id="@+id/rb_color_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_btn_category_red"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/rb_color_orange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/rb_color_orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:button="@drawable/selector_btn_category_orange"
                app:layout_constraintLeft_toRightOf="@id/rb_color_red"
                app:layout_constraintRight_toLeftOf="@id/rb_color_yellow"
                app:layout_constraintTop_toTopOf="@+id/rb_color_red" />

            <RadioButton
                android:id="@+id/rb_color_yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:button="@drawable/selector_btn_category_yellow"
                app:layout_constraintLeft_toRightOf="@id/rb_color_orange"
                app:layout_constraintRight_toLeftOf="@id/rb_color_green"
                app:layout_constraintTop_toTopOf="@+id/rb_color_orange" />

            <RadioButton
                android:id="@+id/rb_color_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:button="@drawable/selector_btn_category_green"
                app:layout_constraintLeft_toRightOf="@id/rb_color_yellow"
                app:layout_constraintRight_toLeftOf="@id/rb_color_blue"
                app:layout_constraintTop_toTopOf="@+id/rb_color_yellow" />

            <RadioButton
                android:id="@+id/rb_color_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:button="@drawable/selector_btn_category_blue"
                app:layout_constraintLeft_toRightOf="@id/rb_color_green"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rb_color_yellow" />

            <RadioButton
                android:id="@+id/rb_color_navy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:button="@drawable/selector_btn_category_navy"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/rb_color_purple"
                app:layout_constraintTop_toBottomOf="@+id/rb_color_red" />

            <RadioButton
                android:id="@+id/rb_color_purple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:button="@drawable/selector_btn_category_purple"
                app:layout_constraintLeft_toRightOf="@id/rb_color_navy"
                app:layout_constraintRight_toLeftOf="@id/rb_color_pink"
                app:layout_constraintTop_toTopOf="@+id/rb_color_navy" />

            <RadioButton
                android:id="@+id/rb_color_pink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:button="@drawable/selector_btn_category_pink"
                app:layout_constraintLeft_toRightOf="@id/rb_color_purple"
                app:layout_constraintRight_toLeftOf="@id/rb_color_gray"
                app:layout_constraintTop_toTopOf="@+id/rb_color_purple" />

            <RadioButton
                android:id="@+id/rb_color_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:button="@drawable/selector_btn_category_gray"
                app:layout_constraintLeft_toRightOf="@id/rb_color_pink"
                app:layout_constraintRight_toLeftOf="@id/rb_color_black"
                app:layout_constraintTop_toTopOf="@+id/rb_color_pink" />

            <RadioButton
                android:id="@+id/rb_color_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_btn_category_black"
                app:layout_constraintLeft_toRightOf="@id/rb_color_gray"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rb_color_gray" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/btn_delete" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>